# syclacademy

./: README.md  generate-curriculum.sh
Code_Exercises/: CMakeLists.txt
Code_Exercises/Exercise_03_Buffer_Accessor/: README.md  source.cpp
Code_Exercises/Section_13_Coalesced_Global_Memory/: CMakeLists.txt  README.md
Code_Exercises/Section_14_Handling_Errors/: CMakeLists.txt
Code_Exercises/Section_15_Matrix_Transpose/: CMakeLists.txt
Code_Exercises/Section_18_Work_Group_Sizes/: CMakeLists.txt
Code_Exercises/Section_1_Advanced_Data_Flow/: CMakeLists.txt
Code_Exercises/Section_22_Data_and_Dependencies/: CMakeLists.txt
Code_Exercises/Section_23_In_Order_Queue/: CMakeLists.txt
Code_Exercises/Section_24_Multiple_Devices/: CMakeLists.txt
Code_Exercises/Section_26_Data_Parallelism/: CMakeLists.txt
Code_Exercises/Section_2_Device_Discovery/: CMakeLists.txt
Code_Exercises/Section_3_Image_Convolution/: CMakeLists.txt  README.md
Code_Exercises/Section_4_Local_Memory_Tiling/: CMakeLists.txt
Code_Exercises/Section_6_What_is_SYCL/: CMakeLists.txt  README.md
Code_Exercises/Section_7_Asynchronous_Execution/: CMakeLists.txt  README.md
Code_Exercises/Section_8_Enqueueing_a_Kernel/: CMakeLists.txt
Code_Exercises/Section_9_Managing_Data/: CMakeLists.txt
Code_Exercises/solutions/: ex3_solution.cpp
Lesson_Materials/Lecture_02_Enqueueing_a_Kernel/: index.html
Lesson_Materials/Lecture_03_Managing_Data/: index.html
Lesson_Materials/Section_13_Coalesced_Global_Memory/: index.html
Lesson_Materials/Section_14_Handling_Errors/: index.html
Lesson_Materials/Section_15_Matrix_Transpose/: index.html
Lesson_Materials/Section_18_Work_Group_Sizes/: index.html
Lesson_Materials/Section_1_Advanced_Data_Flow/: index.html
Lesson_Materials/Section_22_Data_and_Dependencies/: index.html
Lesson_Materials/Section_23_In_Order_Queue/: index.html
Lesson_Materials/Section_24_Multiple_Devices/: index.html
Lesson_Materials/Section_25_Using_USM/: index.html
Lesson_Materials/Section_26_Data_Parallelism/: index.html
Lesson_Materials/Section_2_Device_Discovery/: index.html
Lesson_Materials/Section_3_Image_Convolution/: index.html
Lesson_Materials/Section_4_Local_Memory_Tiling/: index.html
Lesson_Materials/Section_6_What_is_SYCL/: index.html
Lesson_Materials/Section_7_Asynchronous_Execution/: index.html
Lesson_Materials/Section_8_Enqueueing_a_Kernel/: index.html
Lesson_Materials/Section_9_Managing_Data/: index.html
